--- a/myweb2.html
+++ b/myweb2.html
@@ -158,7 +158,7 @@ Ways of contact:
 <hr>
 <br>
 <div class="prev_container">
-<a href="myweb.html" class="prev">Previous</a>
+<a href="index.html" class="prev">Previous</a>
 
 </div>
 </html>
